--- a/python_code/firebase_uploader.ipynb
+++ b/python_code/firebase_uploader.ipynb
@@ -15,10 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "49ffbfc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import firebase_admin\n",
     "from firebase_admin import credentials, storage\n",
@@ -67,15 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b37cbe76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<firebase_admin.App at 0x20281c11190>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cred = credentials.Certificate(service_account_info)\n",
     "firebase_admin.initialize_app(cred,{\n",
-    "    'storageBucket': 'coffee-shop-app-a4152.appspot.com',\n",
-    "     'databaseURL': 'https://coffee-shop-app-a4152-default-rtdb.firebaseio.com/'\n",
+    "    'storageBucket': 'coffee-shop-app-590f9.firebasestorage.app',\n",
+    "     'databaseURL': 'https://coffee-shop-app-590f9-default-rtdb.europe-west1.firebasedatabase.app/'\n",
     "})"
    ]
   },
@@ -88,14 +110,6 @@
    "source": [
     "bucket = storage.bucket()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff8095b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -127,10 +141,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5f98b7ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>description</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>price</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>image_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cappuccino</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>A rich and creamy cappuccino made with freshly...</td>\n",
+       "      <td>[Espresso, Steamed Milk, Milk Foam]</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>cappuccino.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumbo Savory Scone</td>\n",
+       "      <td>Bakery</td>\n",
+       "      <td>Deliciously flaky and buttery, this jumbo savo...</td>\n",
+       "      <td>[Flour, Butter, Cheese, Herbs, Baking Powder, ...</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>SavoryScone.webp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 name category  \\\n",
+       "0          Cappuccino   Coffee   \n",
+       "1  Jumbo Savory Scone   Bakery   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  A rich and creamy cappuccino made with freshly...   \n",
+       "1  Deliciously flaky and buttery, this jumbo savo...   \n",
+       "\n",
+       "                                         ingredients  price  rating  \\\n",
+       "0                [Espresso, Steamed Milk, Milk Foam]   4.50     4.7   \n",
+       "1  [Flour, Butter, Cheese, Herbs, Baking Powder, ...   3.25     4.3   \n",
+       "\n",
+       "         image_path  \n",
+       "0    cappuccino.jpg  \n",
+       "1  SavoryScone.webp  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_json('products/products.jsonl',lines=True)\n",
     "df.head(2)"
@@ -171,10 +263,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "881051e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Cappuccino\n",
+      "1 Jumbo Savory Scone\n",
+      "2 Latte\n",
+      "3 Chocolate Chip Biscotti\n",
+      "4 Espresso shot\n",
+      "5 Hazelnut Biscotti\n",
+      "6 Chocolate Croissant\n",
+      "7 Dark chocolate\n",
+      "8 Cranberry Scone\n",
+      "9 Croissant\n",
+      "10 Almond Croissant\n",
+      "11 Ginger Biscotti\n",
+      "12 Oatmeal Scone\n",
+      "13 Ginger Scone\n",
+      "14 Chocolate syrup\n",
+      "15 Hazelnut syrup\n",
+      "16 Carmel syrup\n",
+      "17 Sugar Free Vanilla syrup\n"
+     ]
+    }
+   ],
    "source": [
     "for index, row in df.iterrows():\n",
     "    print(index, row['name'])\n",
@@ -183,7 +300,9 @@
     "    \n",
     "    image_url = upload_image(bucket,image_path)\n",
     "    product_data = row.to_dict()\n",
+    "    #Remove image path\n",
     "    product_data.pop('image_path')\n",
+    "    #Add image url column from storage bucket\n",
     "    product_data['image_url']= image_url\n",
     "    \n",
     "    # Add to Firestore\n",
@@ -210,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "inkitt_env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
